Moved some heading styles to general App.scss

--- a/rtg/src/App.scss
+++ b/rtg/src/App.scss
@@ -1,4 +1,19 @@
 .App {
   font-family: 'Roboto', sans-serif;
   text-align: center;
+
+  h1, h2, h3, h4, h5, h6 {
+    font-family: Raleway, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 6px;
+  }
+
+  h1 { font-size: 40px; }
+  h2 { font-size: 32px; }
+  h3 { font-size: 28px; }
+  h4 { font-size: 22px; }
+  h5 { font-size: 18px; }
+  h6 { font-size: 14px; }
+
 }
