--- a/rtg/src/App.scss
+++ b/rtg/src/App.scss
@@ -2,14 +2,16 @@
   font-family: 'Roboto', sans-serif;
   text-align: center;
 
-  min-width: 320px;
-  min-height: 100vh;
+  .content {
+    min-height: 100vh;
+    min-width: 320px;
 
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 
-  .main-content {
-    flex-grow: 1;
+    .page-content {
+      flex-grow: 1;
+    }
   }
 
   h1, h2, h3, h4, h5, h6 {
