--- a/rtg/src/components/LoginForm.scss
+++ b/rtg/src/components/LoginForm.scss
@@ -14,7 +14,12 @@
   }
 
   &__formError {
-    margin-top: 10px;
+    margin-top: 20px;
     text-align: center;
+  }
+
+  &__second-button-row {
+    display: flex;
+    justify-content: space-around;
   }
 }
