Switch to Lobster as new heading font, yay! :-)

--- a/rtg/src/App.scss
+++ b/rtg/src/App.scss
@@ -1,12 +1,10 @@
-.App {
+body {
   font-family: 'Roboto', sans-serif;
   text-align: center;
 
   h1, h2, h3, h4, h5, h6 {
-    font-family: Raleway, "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-weight: 400;
-    text-transform: uppercase;
-    letter-spacing: 6px;
+    font-family: Lobster, cursive;
+    font-weight: normal;
   }
 
   h1 { font-size: 40px; }
