--- a/rtg/src/pages/Schedule.scss
+++ b/rtg/src/pages/Schedule.scss
@@ -1,6 +1,16 @@
 .SchedulePage {
+  &__toolbar {
+    display: flex;
+    align-items: center;
+    height: 60px;
+
+    box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
+
+    font-family: 'Roboto', sans-serif;
+  }
   &__toolbar-title {
     margin-left: 20px;
+    font-size: 18px;
   }
 
   &__no-games-present {
