--- a/rtg/src/pages/Schedule.scss
+++ b/rtg/src/pages/Schedule.scss
@@ -7,6 +7,15 @@
     box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
 
     font-family: 'Roboto', sans-serif;
+
+    &.sticky {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      margin: 0;
+      width: 100%;
+    }
   }
   &__toolbar-title {
     margin-left: 20px;
