--- a/rtg/src/pages/Schedule.scss
+++ b/rtg/src/pages/Schedule.scss
@@ -3,6 +3,7 @@
     display: flex;
     align-items: center;
     height: 60px;
+    z-index: 1000;
 
     box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
 
