--- a/rtg/src/pages/Schedule.scss
+++ b/rtg/src/pages/Schedule.scss
@@ -1,9 +1,11 @@
+@import '../sass/z-indexes.scss';
+
 .SchedulePage {
   &__toolbar {
     display: flex;
     align-items: center;
     height: 60px;
-    z-index: 1000;
+    z-index: $zScheduleToolbar;
 
     box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
 
