--- a/rtg/src/sass/mixins/_game-card-ribbon.scss
+++ b/rtg/src/sass/mixins/_game-card-ribbon.scss
@@ -6,12 +6,14 @@
 
   box-sizing: border-box;
 
-  position: relative;
+  position: absolute;
+  left: calc(50% - #{$width / 2});
   height: $wrapped-el-height + 2 * $added-height;
 
   background: $color;
   box-shadow: -6px 3px 19px -7px rgba(0, 0, 0, 1);
   width: $width;
+  min-width: $width;
 
   &:before {
     position: absolute;
