--- a/rtg/src/components/GameCard.scss
+++ b/rtg/src/components/GameCard.scss
@@ -1,37 +1,62 @@
+@import '../sass/_z-indexes.scss';
+
 .GameCard {
+  box-sizing: border-box;
+
   position: relative;
   display: flex;
   align-items: center;
   justify-content: space-between;
 
-  height: 60px;
-  margin: 50px;
-
-  background-color: #ececec;
-  box-shadow: 0px -1px 25px -1px rgba(0,0,0,0.35);
+  margin: 25px auto;
 
   font-family: 'Roboto', sans-serif;
 
-  &__flag--home { left: -20px; }
-  &__flag--away { right: -20px; }
+  &__flag { z-index: $zGameCardFlags; }
+  &__flag--home { margin-right: -25px; }
+  &__flag--away { margin-left: -25px; }
 
   &__hometeam, &__awayteam {
+    display: flex;
+    align-items: center;
+
     text-transform: uppercase;
     letter-spacing: 1px;
+    height: 60px;
+
     font-size: 20px;
+    background-color: #ececec;
+    //box-shadow: 0px -1px 25px -1px rgba(0,0,0,0.35);
   }
 
   &__hometeam {
-    text-align: left;
+    padding: 0 5px 0 25px;
+    justify-content: flex-start;
     flex-grow: 1;
   }
 
   &__awayteam {
-    text-align: right;
+    padding: 0 25px 0 5px;
+    justify-content: flex-end;
     flex-grow: 1;
   }
 
+  &__hometeam--full,
+  &__awayteam--full {
+    display: none;
+  }
+
   @media only screen and (min-width : 768px) {
-    max-width: 750px;
+    max-width: 850px;
+
+    &__hometeam--full,
+    &__awayteam--full {
+      display: inherit;
+    }
+
+    &__hometeam--abbreviation,
+    &__awayteam--abbreviation {
+      display: none;
+    }
   }
 }
