Started parameterizing the GameCardRibbon a bit

--- a/rtg/src/components/GameCardRibbon.scss
+++ b/rtg/src/components/GameCardRibbon.scss
@@ -29,8 +29,8 @@
     z-index: $zGameCardRibbonContent;
   }
 
-  &__venue {
+  &__city {
     font-size: 13px;
-    overflow: hidden;
+    word-wrap: break-word;
   }
 }
