--- a/rtg/src/components/GameCardRibbon.scss
+++ b/rtg/src/components/GameCardRibbon.scss
@@ -21,7 +21,7 @@
     height: 100%;
     width: 100%;
 
-    font-family: 'Fjalla One', sans-serif;
+    font-family: 'Oswald', sans-serif;
     font-size: 22px;
 
     color: white;
