Make GameCard look good in mobile view and still contain all information.

--- a/rtg/src/pages/Schedule.scss
+++ b/rtg/src/pages/Schedule.scss
@@ -4,8 +4,11 @@
   &__toolbar {
     display: flex;
     align-items: center;
-    height: 60px;
+    justify-content: center;
+    flex-wrap: wrap;
     z-index: $zScheduleToolbar;
+    padding: 15px 5px;
+    margin-bottom: 50px;
 
     box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
 
@@ -23,6 +26,10 @@
   &__toolbar-title {
     margin-left: 20px;
     font-size: 18px;
+  }
+
+  &__game-container {
+    margin: 50px;
   }
 
   &__no-games-present {
