--- a/rtg/src/components/GameCard.scss
+++ b/rtg/src/components/GameCard.scss
@@ -1,62 +1,44 @@
-@import '../sass/_z-indexes.scss';
-
 .GameCard {
   box-sizing: border-box;
 
   position: relative;
+  margin: 25px 0 100px;
+
+  font-family: 'Roboto', sans-serif;
+
   display: flex;
   align-items: center;
   justify-content: space-between;
 
-  margin: 25px auto;
+  height: 60px;
 
-  font-family: 'Roboto', sans-serif;
+  background-color: #f3f3f3;
+  //box-shadow: 0px -1px 25px -1px rgba(0,0,0,0.35);
 
-  &__flag { z-index: $zGameCardFlags; }
-  &__flag--home { margin-right: -25px; }
-  &__flag--away { margin-left: -25px; }
-
-  &__hometeam, &__awayteam {
-    display: flex;
-    align-items: center;
-
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    height: 60px;
-
-    font-size: 20px;
-    background-color: #ececec;
-    //box-shadow: 0px -1px 25px -1px rgba(0,0,0,0.35);
-  }
-
-  &__hometeam {
-    padding: 0 5px 0 25px;
-    justify-content: flex-start;
-    flex-grow: 1;
-  }
-
-  &__awayteam {
-    padding: 0 25px 0 5px;
-    justify-content: flex-end;
-    flex-grow: 1;
-  }
-
-  &__hometeam--full,
-  &__awayteam--full {
+  .hometeam, .awayteam {
     display: none;
+    text-transform: uppercase;
+    font-size: 20px;
+
+    @media only screen and (min-width : 680px) {
+      display: flex;
+      align-items: center;
+      flex-grow: 1
+    }
   }
 
-  @media only screen and (min-width : 768px) {
+  .hometeam {
+    padding: 0 5px 0 30px;
+    justify-content: flex-start;
+  }
+
+  .awayteam {
+    padding: 0 30px 0 5px;
+    justify-content: flex-end;
+  }
+
+  @media only screen and (min-width : 680px) {
     max-width: 850px;
-
-    &__hometeam--full,
-    &__awayteam--full {
-      display: inherit;
-    }
-
-    &__hometeam--abbreviation,
-    &__awayteam--abbreviation {
-      display: none;
-    }
+    margin: 25px auto 75px;
   }
 }
