--- a/rtg/src/sass/_colors.scss
+++ b/rtg/src/sass/_colors.scss
@@ -11,3 +11,9 @@ $lightGold: #E9C467;
 
 $success: #58ce38;
 $error: #ce3838;
+
+$ribbonNeutral: #43b3ae;
+$ribbonNiete: #ED2939;
+$ribbonTendenz: #FF9966;
+$ribbonDifferenz: #FADA5E;
+$ribbonVolltreffer: #00A550;
