Add date separator inbetween GameCards, thus grouping them by same date

--- a/rtg/src/pages/Schedule.scss
+++ b/rtg/src/pages/Schedule.scss
@@ -8,7 +8,6 @@
     flex-wrap: wrap;
     z-index: $zScheduleToolbar;
     padding: 15px 5px;
-    margin-bottom: 50px;
 
     box-shadow: 0 3px 5px rgba(57, 63, 72, 0.3);
 
@@ -29,7 +28,7 @@
   }
 
   &__game-container {
-    margin: 50px;
+    margin: 25px 50px;
   }
 
   &__no-games-present {
