--- a/rtg/src/components/GameCard.scss
+++ b/rtg/src/components/GameCard.scss
@@ -12,6 +12,9 @@
 
   height: 60px;
 
+  border-left: 20px solid white;
+  border-right: 20px solid white;
+
   background-color: #f3f3f3;
   //box-shadow: 0px -1px 25px -1px rgba(0,0,0,0.35);
 
@@ -28,12 +31,12 @@
   }
 
   .hometeam {
-    padding: 0 5px 0 30px;
+    padding: 0 5px 0 35px;
     justify-content: flex-start;
   }
 
   .awayteam {
-    padding: 0 30px 0 5px;
+    padding: 0 35px 0 5px;
     justify-content: flex-end;
   }
 
