--- a/rtg/src/components/GameCardRibbon.scss
+++ b/rtg/src/components/GameCardRibbon.scss
@@ -27,6 +27,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    align-items: center;
     padding: 5px;
     height: 100%;
     width: 100%;
@@ -54,5 +55,7 @@
     font-size: 14px;
     word-wrap: break-word;
     font-weight: 300;
+    text-align: center;
+    line-height: 1.2;
   }
 }
