--- a/rtg/src/components/ExtraBetsTab.scss
+++ b/rtg/src/components/ExtraBetsTab.scss
@@ -1,9 +1,8 @@
 .ExtraBetsTab {
-  &__game-bets-container {
-    text-align: center;
+  &__extra-bets-container {
     margin-top: 50px;
   }
   &__loadingSpinner {
-    margin: 30px;
+    margin: 30px auto;
   }
 }
