Generalise GameCardSeparator, display deadlines on bet page
Also added some TODOs which came to mind

--- a/rtg/src/components/GameBetsTab.scss
+++ b/rtg/src/components/GameBetsTab.scss
@@ -6,4 +6,14 @@
   &__loadingSpinner {
     margin: 30px;
   }
+
+  &__deadline-separator {
+    display: flex;
+    align-items: center;
+    color: red;
+  }
+
+  &__deadline-separator-text {
+
+  }
 }
