--- a/rtg/src/sass/_colors.scss
+++ b/rtg/src/sass/_colors.scss
@@ -12,6 +12,7 @@ $lightGold: #E9C467;
 $success: #58ce38;
 $error: #ce3838;
 
+$ribbonBet: #1B1B1B;
 $ribbonNeutral: #43b3ae;
 $ribbonNiete: #ED2939;
 $ribbonTendenz: #FF9966;
