--- a/rtg/src/sass/mixins/_game-card-ribbon.scss
+++ b/rtg/src/sass/mixins/_game-card-ribbon.scss
@@ -33,9 +33,7 @@
   }
 
   // TODO how to remove hard dependency to parent class name for the __right subelement?
-  &:after,
-  > .GameCardInfoRibbon__right:after,
-  > .GameCardBetRibbon__right:after {
+  &:after, > .GameCardRibbon__right:after {
     content: "";
     height: 0;
     left: 0;
@@ -44,8 +42,7 @@
     width: 0;
   }
 
-  > .GameCardInfoRibbon__right,
-  > .GameCardBetRibbon__right {
+  > .GameCardRibbon__right {
     width: $width / 2;
     height: 100%;
 
