Removed general padding from ribbon, should be defined by content
Adjusted broken design of game card game info

--- a/rtg/src/components/GameCardGameInfo.scss
+++ b/rtg/src/components/GameCardGameInfo.scss
@@ -4,6 +4,12 @@
   font-family: 'Oswald', sans-serif;
   font-size: 22px;
 
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  justify-content: space-around;
+  height: 90%;
+
   &__kickoff {
     font-size: 26px;
     font-weight: 600;
