--- a/rtg/src/components/GameCardBet.scss
+++ b/rtg/src/components/GameCardBet.scss
@@ -2,5 +2,14 @@
 
 .GameCardBet {
   font-family: 'Oswald', sans-serif;
-  font-size: 22px;
+  font-size: 18px;
+
+  width: 100%;
+
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
+
+  text-align: center;
 }
