--- a/rtg/src/components/BigPicture.scss
+++ b/rtg/src/components/BigPicture.scss
@@ -3,6 +3,8 @@
   margin: 0;
   padding: 0;
 
+  height: 200px;
+
   text-align: center;
 
   display: flex;
@@ -16,5 +18,9 @@
 
   &__heading {
     color: white;
+  }
+
+  @media only screen and (min-width : 480px) {
+    height: 300px;
   }
 }
