Fix hoverColor and column widths of standings table

--- a/rtg/src/components/standings/StandingsTable.scss
+++ b/rtg/src/components/standings/StandingsTable.scss
@@ -1,5 +1,13 @@
 .StandingsTable {
+  margin: 0;
+
   &__loading-spinner {
     margin: 50px 0;
+  }
+
+  @media only screen and (min-width : 850px) {
+    max-width: 850px;
+    margin: 50px auto 75px;
+    box-shadow: 0 0 50px -11px rgba(0, 0, 0, 0.55);
   }
 }
