Improve styling of big avatar
Added white border and simplified JSX.

--- a/rtg/src/components/profile/BigEditableAvatar.scss
+++ b/rtg/src/components/profile/BigEditableAvatar.scss
@@ -1,5 +1,10 @@
 .BigEditableAvatar {
-  margin-top: -64px;
+  margin-top: -75px;
+
+  &__avatar {
+    box-sizing: border-box;
+    border: 5px solid white
+  }
 
   &__username {
     margin: 15px 0 0;
