Replace Lobster with Lobster Two
It has more different font-styles and the non-bold and/or non-italic
fonts do look very nice.
Also remove unnecessary variety of fonts in the Footer
(Open Sans and Raleway) and replace them with plain Roboto
in order to save some page load size.

--- a/rtg/src/App.scss
+++ b/rtg/src/App.scss
@@ -3,8 +3,9 @@ body {
   text-align: center;
 
   h1, h2, h3, h4, h5, h6 {
-    font-family: Lobster, cursive;
+    font-family: Lobster Two, cursive;
     font-weight: normal;
+    font-style: italic;
   }
 
   h1 { font-size: 40px; }
