--- a/rtg/src/components/Footer.scss
+++ b/rtg/src/components/Footer.scss
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   height: 480px;
   padding: 96px;
-  font-family: Raleway, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Roboto', sans-serif;
 
   @media only screen and (max-width : 767px) {
     padding: 40px 15px;
@@ -100,7 +100,7 @@
   &__copyright {
     color: #fefefe;
     font-size: 13px;
-    font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: 'Roboto', sans-serif;
     opacity: 0.5;
   }
 }
