--- a/rtg/src/components/profile/ProfileForm.scss
+++ b/rtg/src/components/profile/ProfileForm.scss
@@ -1,12 +1,16 @@
 .ProfileForm {
   box-sizing: border-box;
   padding: 10px;
-  margin: 0 auto 50px;
+  margin: 0 auto;
   text-align: left;
   min-width: 360px;
 
-  @media only screen and (min-width : 480px) {
-    max-width: 500px;
+  &__container {
+    margin: 0 auto 50px;
+
+    @media only screen and (min-width : 480px) {
+      max-width: 500px;
+    }
   }
 
   &__loading-spinner {
@@ -22,5 +26,9 @@
   &__button-wrapper {
     text-align: center;
     width: 100%;
+  }
+
+  &__save-feedback {
+    margin-top: 25px;
   }
 }
