Style loading error as well, add empty strings fallbacks
The backend is struggling to accept null values for optional fields,
so we introduce an empty string fallback (which also does not
work yet).

--- a/rtg/src/components/profile/ProfileForm.scss
+++ b/rtg/src/components/profile/ProfileForm.scss
@@ -3,7 +3,7 @@
   padding: 10px;
   margin: 0 auto;
   text-align: left;
-  min-width: 360px;
+  min-width: 320px;
 
   &__container {
     margin: 0 auto 50px;
@@ -13,7 +13,8 @@
     }
   }
 
-  &__loading-spinner {
+  &__loading-spinner,
+  &__loading-error {
     margin: 50px 0;
   }
 
