Add Instagram and Twitter links in the Footer
The correct links are yet to be provided

--- a/rtg/src/components/Footer.scss
+++ b/rtg/src/components/Footer.scss
@@ -97,6 +97,10 @@
     }
   }
 
+  &__socialmedia-icon {
+    margin-right: 25px;
+  }
+
   &__copyright {
     color: #fefefe;
     font-size: 13px;
