--- a/rtg/src/components/ExtraBetCard.scss
+++ b/rtg/src/components/ExtraBetCard.scss
@@ -5,6 +5,12 @@
 
   &__actions {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    @media only screen and (min-width : 480px) {
+      flex-direction: row;
+    }
   }
 
   &__result-info {
