Prioritise all TODOs into three categories (P1 to P3)

--- a/rtg/src/sass/mixins/_game-card-ribbon.scss
+++ b/rtg/src/sass/mixins/_game-card-ribbon.scss
@@ -32,7 +32,7 @@
     border-left: $width / 2 solid transparent;
   }
 
-  // TODO how to remove hard dependency to parent class name for the __right subelement?
+  // TODO P3 how to remove hard dependency to parent class name for the __right subelement?
   &:after, > .GameCardRibbon__right:after {
     content: "";
     height: 0;
