Use better cropping module (react-avatar-editor)
This seems to be more flexible in terms of configurability and
styling.
Adjusted the styles such that the crop editor is exactly within the
avatar's boundaries :)

--- a/rtg/src/components/profile/BigEditableAvatar.scss
+++ b/rtg/src/components/profile/BigEditableAvatar.scss
@@ -1,12 +1,5 @@
 .BigEditableAvatar {
-  margin-top: -75px;
-
-  &__avatar {
-    box-sizing: border-box;
-    border: 5px solid white
-  }
-
-  &__username {
-    margin: 15px 0 0;
+  &__avatar-elem:hover {
+    cursor: pointer;
   }
 }
