--- a/rtg/src/components/LoginForm.scss
+++ b/rtg/src/components/LoginForm.scss
@@ -1,11 +1,11 @@
 .LoginForm {
-  margin: 20px auto;
+  margin: 20px;
   padding: 20px;
   text-align: left;
-  width: 400px;
+  max-width: 400px;
 
   &__heading {
-    margin-top: 0;
+    margin: 0;
     text-align: center;
   }
 
@@ -20,6 +20,11 @@
 
   &__second-button-row {
     display: flex;
-    justify-content: space-around;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+
+  @media only screen and (min-width : 480px) {
+    margin: 20px auto;
   }
 }
