--- a/rtg/src/pages/Reception.scss
+++ b/rtg/src/pages/Reception.scss
@@ -1,16 +1,19 @@
 .ReceptionPage {
   &__content {
-    margin-top: -90px;
+    margin-top: -60px;
+
+    @media only screen and (min-width : 480px) {
+      margin-top: -90px;
+    }
   }
 
   &__about {
     font-family: 'Roboto', sans-serif;
-    margin: 75px 10px;
+    margin: 50px 10px;
     padding: 0 20px;
 
     @media only screen and (min-width : 480px) {
-      width: 480px;
-      margin: 75px auto;
+      margin: 50px auto;
     }
   }
 }
