--- a/rtg/src/pages/Reception.scss
+++ b/rtg/src/pages/Reception.scss
@@ -8,11 +8,13 @@
   }
 
   &__about {
+    box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
     margin: 50px 10px;
     padding: 0 20px;
 
     @media only screen and (min-width : 480px) {
+      max-width: 640px;
       margin: 50px auto;
     }
   }
