--- a/rtg/src/components/news/Post.scss
+++ b/rtg/src/components/news/Post.scss
@@ -1,7 +1,11 @@
 .Post {
   &__card {
-    margin: 30px 10px;
+    margin: 30px 0;
     overflow: hidden;
     text-align: left;
+
+    @media only screen and (min-width: 480px) {
+      margin: 30px 10px;
+    }
   }
 }
