Add progress and error handling, make actual request and handle response
Still getting a 403 back currently...

--- a/rtg/src/components/news/AddPostForm.scss
+++ b/rtg/src/components/news/AddPostForm.scss
@@ -20,4 +20,9 @@
     display: flex;
     justify-content: space-evenly;
   }
+
+  &__feedback {
+    margin-top: 10px;
+    text-align: center;
+  }
 }
