--- a/rtg/src/components/GameBetsTab.scss
+++ b/rtg/src/components/GameBetsTab.scss
@@ -1,3 +1,5 @@
+@import '../sass/z-indexes.scss';
+
 .GameBetsTab {
   &__game-bets-container {
     text-align: center;
@@ -11,5 +13,12 @@
     display: flex;
     align-items: center;
     color: red;
+  }
+
+  &__save-button {
+    position: fixed;
+    right: 24px;
+    bottom: 24px;
+    z-index: $zGameBetsTabSaveButton;
   }
 }
