Handle all kinds of bet save responses in parent component Know when everything is done Disable button and show progress during save, prevent editing bets during save.

--- a/rtg/src/sass/_z-indexes.scss
+++ b/rtg/src/sass/_z-indexes.scss
@@ -1,4 +1,5 @@
 $zScheduleToolbar: 1000;
 $zGameCardRibbonContent: 100;
 $zGameCardFlags: 200;
+$zGameBetsTabSavingProgress: 400;
 $zGameBetsTabSaveButton: 500;
