--- a/rtg/src/components/GameBetsTab.scss
+++ b/rtg/src/components/GameBetsTab.scss
@@ -21,4 +21,42 @@
     bottom: 24px;
     z-index: $zGameBetsTabSaveButton;
   }
+
+  &__saving-info {
+    position: fixed;
+    left: -20px;
+    right: -20px;
+    bottom: 0;
+    height: 52px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+
+    background-color: white;
+    box-sizing: border-box;
+    box-shadow: rgba(0, 0, 0, 0.12) 0 1px 6px, rgba(0, 0, 0, 0.12) 0 1px 4px;
+
+    animation: heightAnimate 375ms cubic-bezier(0.4, 0.0, 0.2, 1);
+
+    @keyframes heightAnimate {
+      from {height: 0;}
+      to {height: 52px;}
+    }
+
+    z-index: $zGameBetsTabSavingProgress;
+  }
+
+  &__saving-overlay {
+    position: absolute;
+    top: 0;
+    left: -20px;
+    right: -20px;
+    bottom: -100px; // also cover the flags which exceed the bottom border of the parent div a bit
+    opacity: 0.5;
+    background-color: white;
+    z-index: $zGameBetsTabSavingProgress;
+  }
 }
