--- a/rtg/src/components/standings/StandingsTable.scss
+++ b/rtg/src/components/standings/StandingsTable.scss
@@ -1,3 +1,5 @@
+@import '../../sass/colors.scss';
+
 .StandingsTable {
   margin: 0;
 
@@ -18,6 +20,11 @@
     margin: 50px auto 75px;
     box-shadow: 0 0 50px -11px rgba(0, 0, 0, 0.55);
   }
+}
+
+.StandingsTableRow--self {
+  background-color: lighten($purple, 50%);
+  font-weight: bold;
 }
 
 .TableRowColumn {
