--- a/rtg/src/sass/_z-indexes.scss
+++ b/rtg/src/sass/_z-indexes.scss
@@ -1,5 +1,6 @@
 $zScheduleToolbar: 1000;
 $zGameCardRibbonContent: 100;
+$zProfileCardContent: 100;
 $zGameCardFlags: 200;
 $zGameBetsTabSavingProgress: 400;
 $zGameBetsTabSaveButton: 500;
