--- a/rtg/src/App.scss
+++ b/rtg/src/App.scss
@@ -5,7 +5,7 @@ body {
   h1, h2, h3, h4, h5, h6 {
     font-family: Lobster Two, cursive;
     font-weight: normal;
-    font-style: italic;
+    font-style: normal;
   }
 
   h1 { font-size: 40px; }
