Reduce footer padding a bit, add TODO

--- a/rtg/src/components/Footer.scss
+++ b/rtg/src/components/Footer.scss
@@ -3,7 +3,7 @@
 .Footer {
   box-sizing: border-box;
   height: 480px;
-  padding: 96px;
+  padding: 50px 75px;
   font-family: 'Roboto', sans-serif;
 
   @media only screen and (max-width : 767px) {
