Add slight gradient to BigPictures

--- a/rtg/src/sass/_z-indexes.scss
+++ b/rtg/src/sass/_z-indexes.scss
@@ -1,6 +1,7 @@
-$zScheduleToolbar: 1000;
+$zBigPictureHeading: 50;
 $zGameCardRibbonContent: 100;
 $zProfileCardContent: 100;
 $zGameCardFlags: 200;
 $zGameBetsTabSavingProgress: 400;
 $zGameBetsTabSaveButton: 500;
+$zScheduleToolbar: 1000;
