--- a/rtg/src/components/BigPicture.scss
+++ b/rtg/src/components/BigPicture.scss
@@ -1,4 +1,7 @@
+@import '../sass/_z-indexes.scss';
+
 .BigPicture {
+  position: relative;
   width: 100%;
   margin: 0;
   padding: 0;
@@ -18,6 +21,18 @@
 
   &__heading {
     color: white;
+    z-index: $zBigPictureHeading;
+  }
+
+  &:after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    content: '';
+
+    background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.2) 100%);
   }
 
   @media only screen and (min-width : 480px) {
