--- a/rtg/src/pages/Reception.scss
+++ b/rtg/src/pages/Reception.scss
@@ -1,5 +1,6 @@
 .ReceptionPage {
   &__content {
+    position: relative;
     margin-top: -60px;
 
     @media only screen and (min-width : 480px) {
