--- a/rtg/src/components/BigPicture.scss
+++ b/rtg/src/components/BigPicture.scss
@@ -4,7 +4,7 @@
   position: relative;
   width: 100%;
   margin: 0;
-  padding: 0;
+  padding: 20px;
 
   height: 200px;
 
@@ -18,6 +18,8 @@
   background-size: cover;
   background-position-x: 50%;
   background-position-y: 50%;
+
+  box-sizing: border-box;
 
   &__heading {
     color: white;
