--- a/rtg/src/pages/Rules.scss
+++ b/rtg/src/pages/Rules.scss
@@ -8,7 +8,7 @@
     box-sizing: border-box;
 
     @media only screen and (min-width : 480px) {
-      max-width: 580px;
+      max-width: 640px;
     }
 
     a, a:hover, a:focus, a:active {
@@ -17,7 +17,11 @@
     }
 
     hr {
+      border: 0;
+      height: 1px;
       margin: 30px 0;
+
+      background-color: lighten($lightGold, 15%);
     }
   }
 }
