--- a/rtg/src/components/Footer.scss
+++ b/rtg/src/components/Footer.scss
@@ -2,9 +2,12 @@
 
 .Footer {
   box-sizing: border-box;
-  height: 480px;
   padding: 50px 75px;
   font-family: 'Roboto', sans-serif;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 
   @media only screen and (max-width : 767px) {
     padding: 40px 30px;
