--- a/rtg/src/components/header/DrawerMenu.scss
+++ b/rtg/src/components/header/DrawerMenu.scss
@@ -1,6 +1,27 @@
 .DrawerMenu {
   text-align: left;
 
+  &__paypal-link {
+    color: black;
+    padding: 15px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    font-size: 14px;
+
+    transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+
+    > * {
+      margin: 5px 0;
+    }
+
+    &:hover {
+      background-color: rgba(55, 45, 45, 0.1);
+    }
+  }
+
   a {
     text-decoration: none;
 
