--- a/rtg/src/pages/Bets.scss
+++ b/rtg/src/pages/Bets.scss
@@ -1,7 +1,11 @@
 .BetsPage {
   &__bets-area {
     font-family: 'Roboto', sans-serif;
-    margin: 20px;
+    margin: 10px;
+
+    @media only screen and (min-width: 480px) {
+      margin: 20px;
+    }
   }
 
   &__tab {
