Add and experiment with some fancy Pantone colours

--- a/rtg/src/sass/_colors.scss
+++ b/rtg/src/sass/_colors.scss
@@ -12,8 +12,14 @@ $lightGold: #E9C467;
 $success: #58ce38;
 $error: #ce3838;
 
+// some nice Pantone colours
+$pantoneTpxSilver: #999B9B;
+$pantoneCherryBlossom: #F4CFE0;
+$pantoneAshRose: #B27F7F;
+$pantoneTcxHarborMist: #AFB1B4;
+
 $ribbonBet: #303030;
-$ribbonNeutral: #43b3ae;
+$ribbonNeutral: $pantoneTcxHarborMist;
 $ribbonNiete: #ED2939;
 $ribbonTendenz: #FF9966;
 $ribbonDifferenz: #FADA5E;
