--- a/rtg/src/components/ExtraBetCard.scss
+++ b/rtg/src/components/ExtraBetCard.scss
@@ -30,24 +30,25 @@
     align-items: center;
 
     width: 100%;
-    padding: 16px;
+    padding: 15px;
 
     font-size: 16px;
 
     background-color: lighten($ribbonNeutral, 30%);
     border-top: 1px solid $grey;
-    border-bottom: 1px solid $grey;
   }
 
   &__result-info--finished {
+    color: white;
     background-color: $ribbonNiete;
+
     &.volltreffer {
       background-color: $ribbonVolltreffer;
     }
   }
 
   &__bet-info {
-    padding: 16px;
+    padding: 0 15px 15px;
   }
 
   &__bet-info-bet {
