--- a/rtg/src/components/GameCardRibbon.scss
+++ b/rtg/src/components/GameCardRibbon.scss
@@ -3,12 +3,12 @@
 @import '../sass/mixins/game-card-ribbon.scss';
 
 .GameCardRibbon {
-  &.bet { @include game-card-ribbon($ribbonBet, 60px, 80px); }
-  &.neutral { @include game-card-ribbon($ribbonNeutral, 60px, 80px); }
-  &.niete { @include game-card-ribbon($ribbonNiete, 60px, 80px); }
-  &.tendenz { @include game-card-ribbon($ribbonTendenz, 60px, 80px); }
-  &.differenz { @include game-card-ribbon($ribbonDifferenz, 60px, 80px); }
-  &.volltreffer { @include game-card-ribbon($ribbonVolltreffer, 60px, 80px); }
+  &.bet { @include game-card-ribbon($ribbonBet, 65px, 80px); }
+  &.neutral { @include game-card-ribbon($ribbonNeutral, 65px, 80px); }
+  &.niete { @include game-card-ribbon($ribbonNiete, 65px, 80px); }
+  &.tendenz { @include game-card-ribbon($ribbonTendenz, 65px, 80px); }
+  &.differenz { @include game-card-ribbon($ribbonDifferenz, 65px, 80px); }
+  &.volltreffer { @include game-card-ribbon($ribbonVolltreffer, 65px, 80px); }
 
   display: flex;
   align-items: center;
@@ -24,7 +24,7 @@
 
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
     align-items: center;
     height: 100%;
     width: 100%;
