--- a/rtg/src/sass/_colors.scss
+++ b/rtg/src/sass/_colors.scss
@@ -22,5 +22,7 @@ $ribbonBet: #303030;
 $ribbonNeutral: $pantoneTcxHarborMist;
 $ribbonNiete: #ED2939;
 $ribbonTendenz: #FF9966;
+// TODO P1 choose other color
+$ribbonRemisTendenz: #FF9966;
 $ribbonDifferenz: #FADA5E;
 $ribbonVolltreffer: #00A550;
