--- a/rtg/src/components/news/News.scss
+++ b/rtg/src/components/news/News.scss
@@ -1,3 +1,5 @@
+@import '../../sass/_z-indexes.scss';
+
 .News {
   position: relative;
   margin: 20px auto;
@@ -7,5 +9,7 @@
     position: fixed;
     bottom: 24px;
     right: 24px;
+
+    z-index: $zAddNewsButton;
   }
 }
