Add TODOs found during testing

--- a/rtg/src/sass/mixins/_game-card-ribbon.scss
+++ b/rtg/src/sass/mixins/_game-card-ribbon.scss
@@ -1,3 +1,4 @@
+// TODO P1 rendering on Firefox looks crappy
 @mixin game-card-ribbon($color, $wrapped-el-height, $width) {
   $added-height: 15px;
   $bottom-arrow-height: 10px;
