--- a/rtg/src/components/bets/BetsStatusPanel.scss
+++ b/rtg/src/components/bets/BetsStatusPanel.scss
@@ -18,7 +18,7 @@ $height: 60px;
 
   background-color: white;
   box-sizing: border-box;
-  box-shadow: rgba(0, 0, 0, 0.12) 0 1px 6px, rgba(0, 0, 0, 0.12) 0 1px 4px;
+  box-shadow: rgba(0, 0, 0, 0.32) 0 5px 30px, rgba(0, 0, 0, 0.32) 0 0 15px;
 
   transition:
           bottom 375ms cubic-bezier(0.4, 0.0, 0.2, 1),
