Darken grey of GameCard a bit because it's hardly visible on bright mobile screens

--- a/rtg/src/components/GameCard.scss
+++ b/rtg/src/components/GameCard.scss
@@ -15,8 +15,7 @@
   border-left: 20px solid white;
   border-right: 20px solid white;
 
-  background-color: #f3f3f3;
-  //box-shadow: 0px -1px 25px -1px rgba(0,0,0,0.35);
+  background-color: #e3e3e3;
 
   .hometeam, .awayteam {
     display: none;
