Increase arrow buttons a bit

--- a/rtg/src/components/GameCardBet.scss
+++ b/rtg/src/components/GameCardBet.scss
@@ -6,7 +6,7 @@
 
   &__goal-input-row {
     height: 32px;
-    padding: 2px 5px 5px;
+    padding: 0 5px 4px;
     font-size: 18px;
 
     display: flex;
