--- a/rtg/src/index.scss
+++ b/rtg/src/index.scss
@@ -3,3 +3,14 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+// TODO P1 IE: check if it worked
+// Remove automatically appearing clear button in IE11
+// https://stackoverflow.com/a/23067969
+input[type="text"] {
+  &::-ms-clear {
+    display: none;
+    width:0;
+    height:0;
+  }
+}
