--- a/rtg/src/components/ExtraBetCard.scss
+++ b/rtg/src/components/ExtraBetCard.scss
@@ -3,6 +3,11 @@
 .ExtraBetCard {
   margin: 25px 0;
 
+  @media only screen and (min-width: 640px) {
+    margin: 25px auto;
+    max-width: 620px;
+  }
+
   &__subtitle-points,
   &__subtitle-deadline {
     display: flex;
