--- a/rtg/src/sass/_z-indexes.scss
+++ b/rtg/src/sass/_z-indexes.scss
@@ -6,3 +6,4 @@ $zGameCardFlags: 200;
 $zGameBetsTabSavingProgress: 400;
 $zGameBetsTabSaveButton: 500;
 $zScheduleToolbar: 1000;
+$zDemoIndicator: 10000;
