Rename GameCardSeparator to more generic RtgSeparator

--- a/rtg/src/components/RtgSeparator.scss
+++ b/rtg/src/components/RtgSeparator.scss
@@ -1,6 +1,6 @@
 @import '../sass/colors.scss';
 
-.GameCardSeparator {
+.RtgSeparator {
   display: flex;
   justify-content: center;
   position: relative;
