In addition to zoom slider, offer zoom in and out buttons beside it

--- a/rtg/src/components/profile/BigEditableAvatar.scss
+++ b/rtg/src/components/profile/BigEditableAvatar.scss
@@ -7,4 +7,13 @@
     margin: 15px auto;
     max-width: 500px;
   }
+
+  &__slider-wrapper {
+    display: flex;
+    align-items: center;
+  }
+
+  &__slider {
+    flex-grow: 1;
+  }
 }
