--- a/rtg/src/components/news/Post.scss
+++ b/rtg/src/components/news/Post.scss
@@ -8,4 +8,12 @@
       margin: 30px 10px;
     }
   }
+
+  &__card-title {
+    box-shadow: rgba(0, 0, 0, 0.07) 0 1px 6px, rgba(0, 0, 0, 0.07) 0 1px 4px
+  }
+
+  &__card-actions {
+    box-shadow: rgba(0, 0, 0, 0.07) 0 -1px 6px, rgba(0, 0, 0, 0.07) 0 -1px 4px
+  }
 }
