--- a/rtg/src/components/news/Post.scss
+++ b/rtg/src/components/news/Post.scss
@@ -1,11 +1,11 @@
 .Post {
   &__card {
-    margin: 30px 0;
+    margin: 40px 0;
     overflow: hidden;
     text-align: left;
 
     @media only screen and (min-width: 480px) {
-      margin: 30px 10px;
+      margin: 40px 10px;
     }
   }
 
@@ -15,5 +15,18 @@
 
   &__card-actions {
     box-shadow: rgba(0, 0, 0, 0.07) 0 -1px 6px, rgba(0, 0, 0, 0.07) 0 -1px 4px
+  }
+
+  &__comments-label-desktop {
+    display: none;
+    @media only screen and (min-width: 480px) {
+      display: inline-block;
+    }
+  }
+
+  &__comments-label-mobile {
+    @media only screen and (min-width: 480px) {
+      display: none;
+    }
   }
 }
