--- a/rtg/src/index.scss
+++ b/rtg/src/index.scss
@@ -1,7 +1,9 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
 }
 
 // Remove automatically appearing clear/reveal icons in IE
