--- a/rtg/src/components/news/CommentsList.scss
+++ b/rtg/src/components/news/CommentsList.scss
@@ -2,13 +2,16 @@
 
 .CommentsList {
   padding-left: 10px;
-  margin: 0 0 10px 3vw;
+  margin: 0 0 15px 3vw;
 
-  border-left: 1px solid $lightGrey;
+  border-left: 1px solid lighten($lightGrey, 15%);
+
+  &--top-level {
+    padding: 0;
+  }
 
   &--collapsed,
   &--top-level {
-    padding: 0;
     margin-left: 0;
     border-left: 0;
   }
