--- a/rtg/src/components/news/Post.scss
+++ b/rtg/src/components/news/Post.scss
@@ -1,3 +1,5 @@
+@import '../../sass/colors.scss';
+
 .Post {
   &__card {
     margin: 40px 0;
@@ -14,7 +16,8 @@
   }
 
   &__card-actions {
-    box-shadow: rgba(0, 0, 0, 0.07) 0 -1px 6px, rgba(0, 0, 0, 0.07) 0 -1px 4px
+    //box-shadow: rgba(0, 0, 0, 0.07) 0 -1px 6px, rgba(0, 0, 0, 0.07) 0 -1px 4px
+    border-top: 1px solid lighten($lightGrey, 20%);
   }
 
   &__comments-label-desktop {
@@ -28,5 +31,11 @@
     @media only screen and (min-width: 480px) {
       display: none;
     }
+  }
+
+  &__comments {
+    border-top: 1px solid lighten($lightGrey, 20%);
+    background-color: lighten($lightGrey, 27%);
+    box-shadow: inset 0px 2px 6px -2px rgba(0,0,0,0.25);
   }
 }
