Further styling adjustments to comments

--- a/rtg/src/components/news/Comment.scss
+++ b/rtg/src/components/news/Comment.scss
@@ -1,6 +1,7 @@
 @import '../../sass/colors.scss';
 
-// TODO P1 mark entire comment on hover
+// TODO P1 always show add comment on top level post
+// TODO P2 mark entire comment on hover
 // TODO P2 animate new comments with fading background color
 .Comment {
   &__avatar-content-wrapper {
