--- a/rtg/src/components/news/Post.scss
+++ b/rtg/src/components/news/Post.scss
@@ -16,8 +16,16 @@
   }
 
   &__card-actions {
-    //box-shadow: rgba(0, 0, 0, 0.07) 0 -1px 6px, rgba(0, 0, 0, 0.07) 0 -1px 4px
+    background-color: white;
+    padding: 0;
     border-top: 1px solid lighten($lightGrey, 20%);
+
+    transition: background-color 375ms cubic-bezier(0.4, 0.0, 0.2, 1);
+
+    &:hover {
+      background-color: lighten($lightGrey, 27%);
+      cursor: pointer;
+    }
   }
 
   &__comments-label-desktop {
@@ -39,6 +47,6 @@
 
     border-top: 1px solid lighten($lightGrey, 20%);
     background-color: lighten($lightGrey, 27%);
-    box-shadow: inset 0px 2px 6px -2px rgba(0,0,0,0.25);
+    box-shadow: inset 0 2px 6px -2px rgba(0,0,0,0.25);
   }
 }
