--- a/rtg/src/components/news/Post.scss
+++ b/rtg/src/components/news/Post.scss
@@ -19,13 +19,6 @@
     background-color: white;
     padding: 0;
     border-top: 1px solid lighten($lightGrey, 20%);
-
-    transition: background-color 375ms cubic-bezier(0.4, 0.0, 0.2, 1);
-
-    &:hover {
-      background-color: lighten($lightGrey, 27%);
-      cursor: pointer;
-    }
   }
 
   &__comments-label-desktop {
@@ -48,5 +41,12 @@
     border-top: 1px solid lighten($lightGrey, 20%);
     background-color: lighten($lightGrey, 27%);
     box-shadow: inset 0 2px 6px -2px rgba(0,0,0,0.25);
+
+    animation: commentHeight 375ms cubic-bezier(0.4, 0.0, 0.2, 1);
+
+    @keyframes commentHeight {
+      from { max-height: 0; }
+      to { max-height: 85vh; }
+    }
   }
 }
