Trigger popover only on user avatar and/or name click

--- a/rtg/src/components/standings/StandingsTableRow.scss
+++ b/rtg/src/components/standings/StandingsTableRow.scss
@@ -1,16 +1,16 @@
 @import '../../sass/colors.scss';
 
 .StandingsTableRow {
-  &:hover {
-    cursor: pointer;
-  }
-
   &--self {
     background-color: lighten($purple, 50%);
     font-weight: bold;
   }
 
   .TableRowColumn {
+    &__user-wrapper:hover {
+      cursor: pointer;
+    }
+
     &__username {
       overflow: hidden;
       text-overflow: ellipsis;
