--- a/rtg/src/components/standings/UserDetailsPopover.scss
+++ b/rtg/src/components/standings/UserDetailsPopover.scss
@@ -3,13 +3,12 @@
 // keep in sync with avatar size in React inline-style!
 $avatarSize: 140px;
 
-// TODO P1 finish styling
 .UserDetailsPopover {
   width: 300px;
   min-width: 300px;
   max-width: 300px;
 
-  margin-bottom: 55px;
+  margin: 0 0 55px 10px;
 
   background: transparent;
 
